# invenio-config

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/: api.rst  conf.py  index.rst  usage.rst
invenio_config/: __init__.py  default.py  entrypoint.py  env.py  folder.py  module.py  utils.py  version.py
tests/: conftest.py  test_invenio_config.py
