# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2015-2018 CERN.
# Copyright (C) 2022 Graz University of Technology.
# Copyright (C) 2025 KTH Royal Institute of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-config
version = attr: invenio_config.__version__
description = "Invenio configuration loader."
long_description = file: README.rst, CHANGES.rst
keywords = invenio config
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-config
classifiers =
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    Flask>=0.11.1

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=2.1.0,<3.0.0
    mock>=2.0.0
    Sphinx>=1.8.0

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_config --cov-report=term-missing
testpaths = tests invenio_config
filterwarnings = ignore::pytest.PytestDeprecationWarning
